# epkv

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
crates/epkv/: Cargo.toml
crates/epkv-client/: Cargo.toml
crates/epkv-client/src/: main.rs
crates/epkv-epaxos/: Cargo.toml
crates/epkv-epaxos/src/: acc.rs  addr_map.rs  bounds.rs  cache.rs  cmd.rs  codec.rs  config.rs  deps.rs  exec.rs  graph.rs  id.rs  id_guard.rs  ins.rs  lib.rs  log.rs  msg.rs  net.rs  peers.rs  replica.rs  state.rs  status.rs  store.rs
crates/epkv-epaxos/src/replica/: config.rs  meta.rs  peers.rs  space.rs  state.rs  temporary.rs
crates/epkv-epaxos/src/types/: acc.rs  bounds.rs  cmd.rs  deps.rs  effect.rs  exec.rs  id.rs  ins.rs  msg.rs  store.rs
crates/epkv-eval/: Cargo.toml
crates/epkv-eval/src/: bench.rs  client.rs  cluster.rs  cluster_generate.rs  lib.rs  main.rs
crates/epkv-eval/tests/: example-cluster.json  local-bench-3.json  local-bench.json  local-cluster-3.json  local-cluster.json
crates/epkv-monitor/: Cargo.toml
crates/epkv-monitor/src/: config.rs  lib.rs  main.rs
crates/epkv-monitor/tests/: config.rs  example-config.toml  local-monitor.toml
crates/epkv-protocol/: Cargo.toml
crates/epkv-protocol/src/: cs.rs  lib.rs  rpc.rs  sm.rs
crates/epkv-rocks/: Cargo.toml
crates/epkv-rocks/src/: cmd.rs  data_db.rs  db_utils.rs  error.rs  key.rs  lib.rs  log_db.rs  log_key.rs  value.rs
crates/epkv-rocks/src/cmd/: batched.rs  kinds.rs  notify.rs  single.rs
crates/epkv-rocks/src/kv/: key.rs  value.rs
crates/epkv-rocks/tests/: log_db.rs
crates/epkv-rpc/: Cargo.toml
crates/epkv-rpc/src/: lib.rs
crates/epkv-server/: Cargo.toml
crates/epkv-server/src/: config.rs  lib.rs  main.rs  net.rs
crates/epkv-server/tests/: config.rs  example-config.toml  local-server.toml
crates/epkv-utils/: Cargo.toml
crates/epkv-utils/src/: asc.rs  atomic_flag.rs  bits.rs  box_ext.rs  bytes_str.rs  cast.rs  chan.rs  cmp.rs  codec.rs  config.rs  display.rs  flag_group.rs  func.rs  iter.rs  lib.rs  lock.rs  multi_semaphore.rs  mutex.rs  onemap.rs  radixmap.rs  rpc.rs  stepper.rs  time.rs  tracing.rs  utf8.rs  vecmap.rs  vecset.rs  watermark.rs
docs/architecture/: architecture.drawio  replica.drawio
