[package]
name = "epkv-epaxos"
version = "0.1.0-dev"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
asc = { version = "0.1.1", features = ["serde"] }
dashmap = "6.0.1"
epkv-utils = { path = "../epkv-utils" }
fnv = "1.0.7"
futures-util = "0.3.30"
numeric_cast = "0.2.1"
once_cell = "1.17.1"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
rand = "0.8.5"
scopeguard = "1.2.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
