[package]
name = "epkv-epaxos"
version = "0.1.0-dev"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
asc = { version = "0.2.0", features = ["serde"] }
dashmap = "6.1.0"
epkv-utils = { path = "../epkv-utils" }
fnv = "1.0.7"
futures-util = "0.3.31"
numeric_cast = "0.3.0"
once_cell = "1.21.3"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.5"
rand = "0.9.2"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
