[package]
name = "epkv-eval"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
asc = "0.2.0"
bytes = "1.9.0"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-queue = "0.3.12"
epkv-protocol = { path = "../epkv-protocol" }
epkv-server = { path = "../epkv-server" }
epkv-utils = { path = "../epkv-utils" }
futures-util = "0.3.31"
numeric_cast = "0.3.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simdutf8 = "0.1.5"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.43.0", features = ["full"] }
wgp = "0.2.0"
