[package]
name = "epkv-eval"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
asc = "0.2.0"
bytes = "1.10.1"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.37", features = ["derive"] }
crossbeam-queue = "0.3.12"
epkv-protocol = { path = "../epkv-protocol" }
epkv-server = { path = "../epkv-server" }
epkv-utils = { path = "../epkv-utils" }
futures-util = "0.3.31"
numeric_cast = "0.3.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simdutf8 = "0.1.5"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.44.2", features = ["full"] }
wgp = "0.2.0"
