[package]
name = "epkv-monitor"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
camino = { version = "1.1.10", features = ["serde1"] }
clap = { version = "4.5.42", features = ["derive"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-protocol = { path = "../epkv-protocol" }
epkv-utils = { path = "../epkv-utils" }
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.4"
tracing = "0.1.41"
wgp = "0.2.0"
