[package]
name = "epkv-monitor"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
camino = { version = "1.1.12", features = ["serde1"] }
clap = { version = "4.5.53", features = ["derive"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-protocol = { path = "../epkv-protocol" }
epkv-utils = { path = "../epkv-utils" }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
wgp = "0.2.0"
