[package]
name = "epkv-protocol"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bytes = { version = "1.6.0", features = ["serde"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-rocks = { path = "../epkv-rocks" }
epkv-utils = { path = "../epkv-utils" }
fnv = "1.0.7"
futures-util = { version = "0.3.30", features = ["sink"] }
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
scopeguard = "1.2.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.40"
wgp = "0.2.0"
