[package]
name = "epkv-rocks"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
asc = "0.1.1"
bytemuck = { version = "1.19.0", features = ["derive"] }
bytes = { version = "1.8.0", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-utils = { path = "../epkv-utils" }
numeric_cast = "0.2.1"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"

[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"
rev = "6face7bb142d3d586383a99997e183db363f97fb" # 2024-05-03
features = ["jemalloc"]
