[package]
name = "epkv-rpc"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
epkv-utils = { path = "../epkv-utils" }
fnv = "1.0.7"
futures-util = { version = "0.3.21", features = ["sink"] }
scopeguard = "1.1.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
