[package]
name = "epkv-server"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
asc = "0.1.1"
bytes = "1.7.2"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.18", features = ["derive"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-protocol = { path = "../epkv-protocol" }
epkv-rocks = { path = "../epkv-rocks" }
epkv-utils = { path = "../epkv-utils" }
futures-util = { version = "0.3.30", features = ["sink"] }
numeric_cast = "0.2.1"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive", "rc"] }
tikv-jemallocator = "0.5.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
wgp = "0.2.0"
