[package]
name = "epkv-server"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
asc = "0.2.0"
bytes = "1.10.1"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.34", features = ["derive"] }
epkv-epaxos = { path = "../epkv-epaxos" }
epkv-protocol = { path = "../epkv-protocol" }
epkv-rocks = { path = "../epkv-rocks" }
epkv-utils = { path = "../epkv-utils" }
futures-util = { version = "0.3.31", features = ["sink"] }
numeric_cast = "0.3.0"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tikv-jemallocator = "0.5.4"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
wgp = "0.2.0"
