[package]
name = "epkv-utils"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
asc = "0.2.0"
bincode = "1.3.3"
bytemuck = { version = "1.21.0", features = ["derive"] }
bytes = { version = "1.9.0", features = ["serde"] }
camino = "1.1.9"
futures-util = { version = "0.3.31", features = ["sink"] }
numeric_cast = "0.3.0"
once_cell = "1.20.2"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
roaring = "0.10.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simdutf8 = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
triomphe = { version = "0.1.14", default-features = false, features = ["std", "serde"] }
