[package]
name = "epkv-utils"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
asc = "0.2.0"
bincode = "1.3.3"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytes = { version = "1.11.0", features = ["serde"] }
camino = "1.1.12"
futures-util = { version = "0.3.31", features = ["sink"] }
numeric_cast = "0.3.0"
once_cell = "1.21.3"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.5"
roaring = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
simdutf8 = "0.1.5"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
triomphe = { version = "0.1.15", default-features = false, features = ["std", "serde"] }
